Implement new pattern on J2ME download management
1. Create a DownloadServiceJ2ME class to handle queueing downloads, issuing each download
an id and status checking.  Info is saved to RMS

2. Remove some j2me test methods that dont fit with new pattern and are already covered
by the core tests